fixed : biography photo in biography handler
