# docs/swagger.json
@@ -76,9 +76,10 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Create the initial author biography (only used once, when no biography exists yet)",
+                "description": "Create the initial author biography (supports JSON or multipart for image upload)",
                 "consumes": [
-                    "application/json"
+                    "application/json",
+                    " multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -89,10 +90,21 @@
                 "summary": "Create biography",
                 "parameters": [
                     {
-                        "description": "Biography content",
+                        "type": "string",
+                        "description": "Biography content (used in multipart)",
+                        "name": "content",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "Biography image file (used in multipart)",
+                        "name": "photo",
+                        "in": "formData"
+                    },
+                    {
+                        "description": "Biography content (used in JSON)",
                         "name": "request",
                         "in": "body",
-                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/dto.BiographyCreateRequest"
                         }
@@ -1896,7 +1908,8 @@
             "post": {
                 "description": "Create a new work",
                 "consumes": [
-                    "application/json"
+                    "application/json",
+                    "multipart/form-data"
                 ],
                 "summary": "Create work",
                 "parameters": [
@@ -1908,6 +1921,45 @@
                         "schema": {
                             "$ref": "#/definitions/dto.WorkCreateRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title",
+                        "name": "title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Category ID",
+                        "name": "category_id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Audience type: adult or children",
+                        "name": "audience_type",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Description",
+                        "name": "description",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Publish year",
+                        "name": "publish_year",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "Work file (.pdf or .txt)",
+                        "name": "file",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -1969,7 +2021,8 @@
             "put": {
                 "description": "Update an existing work by id",
                 "consumes": [
-                    "application/json"
+                    "application/json",
+                    "multipart/form-data"
                 ],
                 "summary": "Update work",
                 "parameters": [
@@ -1981,13 +2034,40 @@
                         "required": true
                     },
                     {
-                        "description": "work payload",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.WorkCreateRequest"
-                        }
+                        "type": "string",
+                        "description": "Title",
+                        "name": "title",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Category ID",
+                        "name": "category_id",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Audience type: adult or children",
+                        "name": "audience_type",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Description",
+                        "name": "description",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Publish year",
+                        "name": "publish_year",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "Work file (.pdf or .txt)",
+                        "name": "file",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -2383,7 +2463,6 @@
             "required": [
                 "audience_type",
                 "category_id",
-                "content",
                 "title"
             ],
             "properties": {
@@ -2395,9 +2474,6 @@
                     ]
                 },
                 "category_id": {
-                    "type": "string"
-                },
-                "content": {
                     "type": "string"
                 },
                 "description": {
@@ -2422,13 +2498,13 @@
                 "category_id": {
                     "type": "string"
                 },
-                "content": {
-                    "type": "string"
-                },
                 "created_at": {
                     "type": "string"
                 },
                 "description": {
+                    "type": "string"
+                },
+                "file_path": {
                     "type": "string"
                 },
                 "id": {
